# Capitok

./: .env.example  .gitignore  Dockerfile  README.md  README.zh-CN.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  openapi.yaml  pyproject.toml
.githooks/: post-commit  pre-push
docs/: architecture.md  architecture.zh-CN.md  implementation-status.md  implementation-status.zh-CN.md
integrations/codex/: README.md  __init__.py  config.py  hook_runtime.py  install.py  payloads.py
integrations/hermes/: README.md  __init__.py  plugin.yaml
migrations/: __init__.py  env.py
migrations/versions/: 0001_base_schema.py  0002_refined_memory_indexes.py
scripts/: backup.sh  dump-schema.sh  install-codex-hook.sh  install-hermes-plugin.sh  migrate.sh  restore.sh  start-api.sh  wait-for-db.sh
sql/: schema.sql
src/capitok/: __init__.py  cli.py  client_config.py  config.py  db.py  main.py  schemas.py  security.py
src/capitok/queue/: __init__.py  inprocess.py  interface.py
tests/: capitok-cli.test.sh  codex-hook-install.test.sh  codex-hook-payloads.test.sh  codex-hook-runtime.test.sh  hermes-plugin-autosave.test.sh  hermes-plugin-compat.test.sh  install-hermes-plugin.test.sh  session-api.test.sh
